# ctx-authority

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: sdlc.yml
docs/: DESIGN.md  PRODUCT_SENSE.md  PROJECT_GOALS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SUPPORTED_FEATURES.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 0001-local-broker-mvp.md  0002-build-system-and-branching.md  README.md
docs/exec-plans/completed/: 0001-local-broker.md  0002-build-system-and-branching.md  0002-build-system.md  0003-run-profiles-http-proxy.md  0004-https-proxy-proposals-doctor.md  0005-authority-workflow-ux.md  0006-attenuable-grants.md  0007-cli-secret-backends.md  0008-provider-capabilities.md  README.md
docs/product-specs/: agent-skill.md  approval-flow.md  design-decisions.md  distribution.md  index.md  local-broker-mvp.md  local-broker.md  mcp-server.md  open-questions.md  policy-schema.md  provider-adapters.md  receipt-schema.md  run-profiles.md  secret-backends.md
docs/references/: agent-first-repo-structure.md  infisical-reference.md  keychain-reference.md  mcp-reference.md
examples/: demo-action.json  demo-policy.yaml
scripts/bazel/: cargo_clippy_check.sh  cargo_fmt_check.sh  cargo_test.sh  cli_smoke_test.sh  env.sh  full_suite.sh  leak_scan.sh  shell_test.bzl
scripts/smoke/: README.md  real_provider_smoke.sh
skills/authority-broker/: SKILL.md
skills/ctx-authority/: SKILL.md
src/: approvals.rs  audit.rs  backends.rs  boundary.rs  canonical.rs  capabilities.rs  config.rs  error.rs  execution_context.rs  grants.rs  lib.rs  main.rs  mcp.rs  models.rs  policy.rs  providers.rs  proxy.rs  receipts.rs  runtime.rs
tests/: approvals_cli.rs  capabilities_cli.rs  run_profiles_proxy.rs
tests/fixtures/: approval-required-action.json  approval-required-policy.yaml  demo-action.json  demo-policy.yaml  env-backend.env
