load("//:scripts/bazel/shell_test.bzl", "shell_test")

COMMON_TEST_DATA = [
    "Cargo.lock",
    "Cargo.toml",
    "scripts/bazel/env.sh",
] + glob([
    "src/**",
    "tests/**",
])

REPO_SCAN_DATA = [
    "AGENTS.md",
    "ARCHITECTURE.md",
    "BUILD.bazel",
    "CONTRIBUTING.md",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "MODULE.bazel",
    "MODULE.bazel.lock",
    "README.md",
    "SECURITY.md",
] + glob([
    ".github/workflows/**",
    "docs/**",
    "scripts/**",
    "skills/**",
    "src/**",
    "tests/**",
], allow_empty = True)

shell_test(
    name = "fmt_check",
    src = "scripts/bazel/cargo_fmt_check.sh",
    data = COMMON_TEST_DATA,
    size = "small",
)

shell_test(
    name = "clippy_check",
    src = "scripts/bazel/cargo_clippy_check.sh",
    data = COMMON_TEST_DATA,
    size = "large",
    timeout = "long",
)

shell_test(
    name = "unit_tests",
    src = "scripts/bazel/cargo_test.sh",
    data = COMMON_TEST_DATA,
    size = "medium",
    timeout = "moderate",
)

shell_test(
    name = "cli_smoke_tests",
    src = "scripts/bazel/cli_smoke_test.sh",
    data = COMMON_TEST_DATA,
    size = "medium",
    timeout = "moderate",
)

shell_test(
    name = "leak_scan",
    src = "scripts/bazel/leak_scan.sh",
    data = REPO_SCAN_DATA,
    size = "small",
)

shell_test(
    name = "full_suite",
    src = "scripts/bazel/full_suite.sh",
    data = REPO_SCAN_DATA,
    size = "large",
    timeout = "long",
)
