[package]
name = "ctxa"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local capability control for AI agents"
homepage = "https://ctx.rs"
repository = "https://github.com/ctxrs/ctx-authority"
readme = "README.md"
keywords = ["ai", "agents", "security", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "ctxa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rcgen = "0.12.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
rustls = "0.21.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
